--- a/Boletin1º/nbproject/project.properties
+++ b/Boletin1º/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Boletin1\u00ba
+application.vendor=Administrador
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,14 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Boletin1_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.LibreriaLeer.classpath}:\
-    ${libs.LibreriaUtilidades.classpath}
+    ${libs.Leer.classpath}:\
+    ${libs.Libreria Utilidades.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
