--- a/3ºTrimestre/nbproject/project.properties
+++ b/3ºTrimestre/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=3\u00baTrimestre
+application.vendor=Administrador
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,11 +25,11 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/3_Trimestre.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Libreria Utilidades.classpath}:\
     ${libs.LibreriaUtilidades.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
