--- a/Boletin Vector de Objetos/nbproject/project.properties
+++ b/Boletin Vector de Objetos/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Libreria Utilidades.classpath}
+    ${libs.Libreria Utilidades.classpath}:\
+    ${libs.LibreriaUtilidades.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
