Add 2 more exercises to last exercises round

--- a/Boletín Ficheros de texto/nbproject/private/private.properties
+++ b/Boletín Ficheros de texto/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=prueba1.txt prueba2.txt prueba3.txt hola.txt prueba
+application.args=prueba1.txt
 compile.on.save=true
 do.depend=false
 do.jar=true
